--- a/HTML/Professional.html
+++ b/HTML/Professional.html
@@ -5,95 +5,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <script src="JS/script.js"></script>
+    <meta name="description" content="Professional Description">
+    <meta name="keywords" content="experience,volunteering,programming,hackathons,languages" />
+    <meta name="author" content="Amir Khan">
+    <link rel=" stylesheet " href="../CSS/style.css ">
+    <link href="https://fonts.googleapis.com/css?family=Poppins " rel="stylesheet ">
     <title>Professional</title>
 </head>
 
 <body>
     <header>
-        <section>
+        <div class="section">
             <label for="toggle-1" class="toggle-menu">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </label>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </label>
             <input type="checkbox" id="toggle-1">
             <nav>
                 <div class="navigate">
                     <ul>
                         <li><a href="../index.html"><i class="icon-home"></i>Home</a></li>
-                        <li><a href="Portfolio.html">Portfolio</a></li>
-                        <li><a href="ContactMe.html">Contact</a></li>
                         <li><a href="Photos.html">Photos</a></li>
-                        <div class="dropdown">
-                            <button class="dropbtn"><a href="AboutMe.html">About Me</a></button>
-                            <div class="dropdown-content">
-                                <a href="Personal.html">Personal</a>
-                                <a href="Professional.html">Professional</a>
-                            </div>
+                        <li><a href="Professional.html">Professional</a></li>
+                        <li><a href="Fireworks.html">Fireworks</a></li>
                     </ul>
                 </div>
             </nav>
-        </section>
-    </header>
-    <h1 class="About"><span class="AboutSpan">About</span> Me</h1>
-    <div class="colour-container">
-        <img src="../Assests/Camera.png" id="test">
-        <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-            simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum is simply
-            dummy text of the printing and typesetting industry.
-        </p>
-    </div>
-    <h2 class="overlapTitle">Background</h2>
-    <div class="background-container">
-        <img src="../Assests/Camera.png" id="test">
-        <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-            simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum is simply
-            dummy text of the printing and typesetting industry.
-        </p>
-    </div>
-    <h2 class="overlapTitle">Skills</h2>
-    <div class="colour-container">
-        <div class="skills">
-            <ul>
-                <li id="skill1">
-                    <p>CSS</p>
-                </li>
-                <li id="skill2">
-                    <p>HTML</p>
-                </li>
-                <li id="skill3">
-                    <p>Javascript</p>
-                </li>
-                <li id="skill4">
-                    <p>f</p>
-                </li>
-                <li id="skill5">
-                    <p>f</p>
-                </li>
-                <li id="skill6">
-                    <p>f</p>
-                </li>
-                <li id="skill7">
-                    <p>f</p>
-                </li>
-                <li id="skill8">
-                    <p>f</p>
-                </li>
-                <li id="skill4">
-                    <p>f</p>
-                </li>
-            </ul>
         </div>
-
-        </section>
-
+    </header>
+    <nav id="footer">
+        <ul>
+            <li><i></li>
+            <li><i></i></li>
+            <li><i></i></li>
+            <li><i></i></li>
+        </ul>
+    </nav>
+    <h1 class="About "><span class="AboutSpan">About</span> Me</h1>
+    <div class="colour-container ">
+        <img src="../Assests/trainingSesh.jpg " class="aboutMe ">
+        <p class="Text "> I am a 18 fullstack developer, born in oldham, currently working at <b><a href = "https://www.webapplicationsuk.com/ ">Web applications UK</a></b> as a software engineer I've been involved in the tech industry for approximatley 3 years. I love
+            programming, photography, problem solving and mentoring. I learnt how to program during a summer placement and fell in love with it. I also study for a degree apprenticeship at manchester metropoliton university
+        </p>
+    </div>
+    <h2 class="overlapTitle ">Background</h2>
+    <div class="background-container ">
+        <img src="../Assests/mmuTalk.jpg " class="aboutMe " />
+        <ul>
+            <li class="Text ">Studied Filmaking and cinematography for 2 years</li>
+            <li class="Text ">Participated in summer placement scheme ran by web applications uk</li>
+            <li class="Text ">Awarded Scholorship by Web Applications UK for 6th form at oldham hulme grammar school</li>
+            <li class="Text ">Joined Web applications UK full time in 2018 as a junior software engineer </li>
+        </ul>
+    </div>
+    <h2 class="overlapTitle ">Skills</h2>
+    <div class="colour-container ">
+        <ul class="chart ">
+            <li class="chartLength ">
+                <span class="graph " style="height:65% " title="Javscript "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:40% " title="C# "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:50% " title="CSS "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:65% " title="HTML "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:100% " title="TSQL "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:85% " title="R "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:55% " title="Node.JS "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:55% " title="VBScript "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:55% " title="ClassicASP "></span>
+            </li>
+            <li class="chartLength ">
+                <span class="graph " style="height:25% " title="Foxpro "></span>
+            </li>
+        </ul>
+    </div>
+    <h2 class="overlapTitle ">Volunterring and experience</h2>
+    <div class="background-container ">
+        <img src="../Assests/hackman.PNG " class="aboutMe " />
+        <ul>
+            <li class="Text ">Volutneer every year at hack100.</li>
+            <li class="Text ">STEM ambassador - volunteer at several schools and clubs teaching kids multiple languages</li>
+            <li class="Text ">3 years of experience working in a fullstck development house</li>
+        </ul>
     </div>
 </body>
 
