--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <canvas id="myCanvas"></canvas>
     <header>
-        <section>
+        <div class="section">
             <label for="toggle-1" class="toggle-menu">
                 <ul>
+                    <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -28,21 +29,15 @@
                 <div class="navigate">
                     <ul>
                         <li><a href="index.html"><i class="icon-home"></i>Home</a></li>
-                        <li><a href="HTML/Portfolio.html">Portfolio</a></li>
-                        <li><a href="HTML/ContactMe.html">Contact</a></li>
                         <li><a href="HTML/Photos.html">Photos</a></li>
-                        <div class="dropdown">
-                            <button class="dropbtn"><a href="HTML/AboutMe.html">About Me</a></button>
-                            <div class="dropdown-content">
-                                <a href="HTML/Personal.html">Personal</a>
-                                <a href="HTML/Professional.html">Professional</a>
-                            </div>
+                        <li><a href="HTML/Professional.html">Professional</a></li>
+                        <li><a href="HTML/Fireworks.html">Fireworks</a></li>
                     </ul>
                 </div>
             </nav>
-        </section>
+        </div>
     </header>
     <div class="name-container">
         <h1 id="myName">Amir Khan</h1>
-
+    </div>
 </body>
